--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An Angular 2 demo using Firebase",
   "main": "index.js",
   "scripts": {
-    "start": "lite-server"
+    "start": "concurrently \"tsc -w\" \"lite-server\""
   },
   "repository": {
     "type": "git",
@@ -29,8 +29,10 @@
     "@angular/platform-browser": "2.0.0",
     "@angular/platform-browser-dynamic": "2.0.0",
     "@angular/router": "3.0.0",
+    "angularfire2": "^2.0.0-beta.5",
     "bootstrap": "^3.3.6",
     "es6-shim": "^0.35.1",
+    "firebase": "^3.4.1",
     "livereload": "^0.4.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
@@ -39,6 +41,8 @@
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.32",
+    "@types/request": "0.0.30",
+    "concurrently": "^3.0.0",
     "lite-server": "^2.2.2",
     "plugin-typescript": "^4.0.10",
     "typescript": "^2.0.0"
